@@ -76,6 +76,11 @@ usec_to_ticks (uint32_t usec)
   return usec * MHZ;
 }
 
+static uint32_t
+ticks_to_usec (uint32_t ticks)
+{
+  return ticks / MHZ;
+}
 
 static void
 chx_enable_intr (uint8_t irq_num)
